# fisherA2Z

./: README.md  pyproject.toml
examples/: Tutorial_00_Get_Started.ipynb  Tutorial_01_Change_Probes.ipynb  Tutorial_02_Change_PZ_Values_and_Priors.ipynb  Tutorial_03_Change_Nz_and_Neff.ipynb
examples/data/: obj_deriv_2x2pt_y10.pkl  obj_deriv_3x2pt_y10.pkl  obj_deriv_3x2pt_y10_customize_nz.pkl  obj_deriv_3x2pt_y10_no_outliers.pkl  obj_deriv_graham.pkl  obj_deriv_ss_y10.pkl  obj_deriv_ss_y10_customize_nz.pkl
examples/forecast-pz/: config.yml
src/fisherA2Z/: __init__.py  cli.py  fisher.py  util.py
src/fisherA2Z/data/: IA_interp.p  Y1_2x2_inv.txt  Y1_pos_shear_inv.txt  obj_deriv_3x2_y10_step_01.pkl
src/fisherA2Z/stages/: build_pdf.py  create_plots.py  forecast_flavor.py
src/fisherA2Z/stages/.ipynb_checkpoints/: build_pdf-checkpoint.py  create_plots-checkpoint.py  prepare_fisher-checkpoint.py
